--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
 </head>
 
 <body class="font-lato">
-    <header class="container mx-auto">
+    <header class="container mx-auto px-5 lg:p-0">
+
+        <!-- Navigation Bar -->
         <nav class="mt-12">
             <div class="navbar bg-white lg:bg-[#F85559] rounded-full  px-14 py-4">
                 <div>
@@ -75,10 +77,69 @@
             </div>
         </nav>
 
+        <!-- Carousel/slider part of header -->
+        <div class="carousel w-full mt-14">
+
+            <div id="slide1" class="carousel-item relative w-full">
+              <img src="./images/banner1.png" class="w-full rounded-lg"/>               
+              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                <a href="#slide1" class="btn btn-circle  bg-black text-white border-none relative top-24">❮</a> 
+                    <span class="text-center">
+                    <h1 class="text-white text-sm lg:text-7xl font-extrabold text-center">Exotic tastes at your <br>doorstep</h1><br>
+                    <p class="text-white text-xl font-normal text-center">We supply highly quality organic products</p><br>
+                    <button class="px-3 py-5 text-white bg-[#F85559] font-bold text-xl rounded-lg">Shop Now</button>
+                   </span>
+                <a href="#slide2" class="btn btn-circle  bg-black text-white border-none relative top-24">❯</a>
+              </div>
+            </div> 
+
+            <div id="slide2" class="carousel-item relative w-full">
+              <img src="./images/banner2.png" class="w-full rounded-lg" />
+              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                <a href="#slide1" class="btn btn-circle  bg-black text-white border-none relative top-24">❮</a> 
+                <span class="text-center">
+                    <h1 class="text-white text-sm lg:text-7xl font-extrabold text-center">Exotic tastes at your <br>doorstep</h1><br>
+                    <p class="text-white text-xl font-normal text-center">We supply highly quality organic products</p><br>
+                    <button class="px-3 py-5 text-white bg-[#F85559] font-bold text-xl rounded-lg">Shop Now</button>
+                   </span>
+                <a href="#slide3" class="btn btn-circle  bg-black text-white border-none relative top-24">❯</a>
+              </div>
+            </div> 
+
+            <div id="slide3" class="carousel-item relative w-full">
+              <img src="./images/banner3.png" class="w-full rounded-lg" />
+              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                <a href="#slide2" class="btn btn-circle  bg-black text-white border-none relative top-24">❮</a> 
+                <span class="text-center">
+                    <h1 class="text-white text-sm lg:text-7xl font-extrabold text-center">Exotic tastes at your <br>doorstep</h1><br>
+                    <p class="text-white text-xl font-normal text-center">We supply highly quality organic products</p><br>
+                    <button class="px-3 py-5 text-white bg-[#F85559] font-bold text-xl rounded-lg">Shop Now</button>
+                   </span>
+                <a href="#slide4" class="btn btn-circle  bg-black text-white border-none relative top-24">❯</a>
+              </div>
+            </div> 
+
+            <div id="slide4" class="carousel-item relative w-full">
+              <img src="./images/banner4.png" class="w-full rounded-lg" />
+              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                <a href="#slide3" class="btn btn-circle  bg-black text-white border-none relative top-24">❮</a> 
+                <span class="text-center">
+                    <h1 class="text-white text-sm lg:text-7xl font-extrabold text-center">Exotic tastes at your <br>doorstep</h1><br>
+                    <p class="text-white text-xl font-normal text-center">We supply highly quality organic products</p><br>
+                    <button class="px-3 py-5 text-white bg-[#F85559] font-bold text-xl rounded-lg">Shop Now</button>
+                   </span>
+                <a href="#slide4" class="btn btn-circle  bg-black text-white border-none relative top-24">❯</a>
+              </div>
+            </div>
+
+        </div>
 
 
     </header>
+   
 
+    
+      
     <main>
 
     </main>
