position parts done perfectly

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 </head>
 
 <body class="font-lato">
+    <!-- Header Starts here -->
     <header class="container mx-auto px-5 lg:p-0">
 
         <!-- Navigation Bar -->
@@ -78,68 +79,84 @@
         </nav>
 
         <!-- Carousel/slider part of header -->
-        <div class="carousel w-full mt-14">
+        <div class="carousel relative w-full mt-14 z-10">
 
             <div id="slide1" class="carousel-item relative w-full">
-              <img src="./images/banner1.png" class="w-full rounded-lg"/>               
-              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                <a href="#slide1" class="btn btn-circle  bg-black text-white border-none relative top-24">❮</a> 
-                    <span class="text-center">
-                    <h1 class="text-white text-sm lg:text-7xl font-extrabold text-center">Exotic tastes at your <br>doorstep</h1><br>
-                    <p class="text-white text-xl font-normal text-center">We supply highly quality organic products</p><br>
-                    <button class="px-3 py-5 text-white bg-[#F85559] font-bold text-xl rounded-lg">Shop Now</button>
-                   </span>
-                <a href="#slide2" class="btn btn-circle  bg-black text-white border-none relative top-24">❯</a>
-              </div>
-            </div> 
+                <img src="./images/banner1.png" class="w-full rounded-lg" />
+                <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                    <a href="#slide1" class="btn btn-circle  bg-black text-white border-none relative top-10 md:top-24">❮</a>
+                    <span class="text-center space-x-3 md:space-y-6 static top-0 lg:relative lg:-top-10">
+                        <h1 class="text-white text-xl md:text-4xl lg:text-7xl font-extrabold text-center">Exotic tastes at your
+                            <br>doorstep</h1>
+                        <p class="text-white text-sm md:text-xl font-normal text-center">We supply highly quality organic products
+                        </p>
+                        <button class="px-2 md:px-3 py-1 md:py-5 text-white bg-[#F85559] font-bold text-sm md:text-xl rounded-lg">Shop Now</button>
+                    </span>
+                    <a href="#slide2" class="btn btn-circle  bg-black text-white border-none relative top-10 md:top-24">❯</a>
+                </div>
+            </div>
 
             <div id="slide2" class="carousel-item relative w-full">
-              <img src="./images/banner2.png" class="w-full rounded-lg" />
-              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                <a href="#slide1" class="btn btn-circle  bg-black text-white border-none relative top-24">❮</a> 
-                <span class="text-center">
-                    <h1 class="text-white text-sm lg:text-7xl font-extrabold text-center">Exotic tastes at your <br>doorstep</h1><br>
-                    <p class="text-white text-xl font-normal text-center">We supply highly quality organic products</p><br>
-                    <button class="px-3 py-5 text-white bg-[#F85559] font-bold text-xl rounded-lg">Shop Now</button>
-                   </span>
-                <a href="#slide3" class="btn btn-circle  bg-black text-white border-none relative top-24">❯</a>
-              </div>
-            </div> 
+                <img src="./images/banner2.png" class="w-full rounded-lg" />
+                <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                    <a href="#slide1" class="btn btn-circle  bg-black text-white border-none relative top-10 md:top-24">❮</a>
+                    <span class="text-center space-x-3 md:space-y-6 static top-0 lg:relative lg:-top-10">
+                        <h1 class="text-white text-xl md:text-4xl lg:text-7xl font-extrabold text-center">Exotic tastes at your
+                            <br>doorstep</h1>
+                        <p class="text-white text-sm md:text-xl font-normal text-center">We supply highly quality organic products
+                        </p>
+                        <button class="px-2 md:px-3 py-1 md:py-5 text-white bg-[#F85559] font-bold text-sm md:text-xl rounded-lg">Shop Now</button>
+                    </span>
+                    <a href="#slide3" class="btn btn-circle  bg-black text-white border-none relative top-10 md:top-24">❯</a>
+                </div>
+            </div>
 
             <div id="slide3" class="carousel-item relative w-full">
-              <img src="./images/banner3.png" class="w-full rounded-lg" />
-              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                <a href="#slide2" class="btn btn-circle  bg-black text-white border-none relative top-24">❮</a> 
-                <span class="text-center">
-                    <h1 class="text-white text-sm lg:text-7xl font-extrabold text-center">Exotic tastes at your <br>doorstep</h1><br>
-                    <p class="text-white text-xl font-normal text-center">We supply highly quality organic products</p><br>
-                    <button class="px-3 py-5 text-white bg-[#F85559] font-bold text-xl rounded-lg">Shop Now</button>
-                   </span>
-                <a href="#slide4" class="btn btn-circle  bg-black text-white border-none relative top-24">❯</a>
-              </div>
-            </div> 
+                <img src="./images/banner3.png" class="w-full rounded-lg" />
+                <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                    <a href="#slide2" class="btn btn-circle  bg-black text-white border-none relative top-10 md:top-24">❮</a>
+                    <span class="text-center space-x-3 md:space-y-6 static top-0 lg:relative lg:-top-10">
+                        <h1 class="text-white text-xl md:text-4xl lg:text-7xl font-extrabold text-center">Exotic tastes at your
+                            <br>doorstep</h1>
+                        <p class="text-white text-sm md:text-xl font-normal text-center">We supply highly quality organic products
+                        </p>
+                        <button class="px-2 md:px-3 py-1 md:py-5 text-white bg-[#F85559] font-bold text-sm md:text-xl rounded-lg">Shop Now</button>
+                    </span>
+                    <a href="#slide4" class="btn btn-circle  bg-black text-white border-none relative top-10 md:top-24">❯</a>
+                </div>
+            </div>
 
             <div id="slide4" class="carousel-item relative w-full">
-              <img src="./images/banner4.png" class="w-full rounded-lg" />
-              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                <a href="#slide3" class="btn btn-circle  bg-black text-white border-none relative top-24">❮</a> 
-                <span class="text-center">
-                    <h1 class="text-white text-sm lg:text-7xl font-extrabold text-center">Exotic tastes at your <br>doorstep</h1><br>
-                    <p class="text-white text-xl font-normal text-center">We supply highly quality organic products</p><br>
-                    <button class="px-3 py-5 text-white bg-[#F85559] font-bold text-xl rounded-lg">Shop Now</button>
-                   </span>
-                <a href="#slide4" class="btn btn-circle  bg-black text-white border-none relative top-24">❯</a>
-              </div>
+                <img src="./images/banner4.png" class="w-full rounded-lg" />
+                <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                    <a href="#slide3" class="btn btn-circle  bg-black text-white border-none relative top-10 md:top-24">❮</a>
+                    <span class="text-center space-x-3 md:space-y-6 static top-0 lg:relative lg:-top-10">
+                        <h1 class="text-white text-xl md:text-4xl lg:text-7xl font-extrabold text-center">Exotic tastes at your
+                            <br>doorstep</h1>
+                        <p class="text-white text-sm md:text-xl font-normal text-center">We supply highly quality organic products
+                        </p>
+                        <button class="px-2 md:px-3 py-1 md:py-5 text-white bg-[#F85559] font-bold text-sm md:text-xl rounded-lg">Shop Now</button>
+                    </span>
+                    <a href="#slide4" class="btn btn-circle  bg-black text-white border-none relative top-10 md:top-24">❯</a>
+                </div>
             </div>
 
         </div>
 
+        <!-- position fruits -->
+        <div>
 
-    </header>
-   
+            <div class="grid grid-cols-5 max-w-3xl mx-auto shadow-lg shadow-[#0000000d] bg-white px-16 py-12 relative -top-28 z-20  invisible lg:visible">
+                <img src="./images/fruit1.png" alt="">
+                <img src="./images/fruit2.png" alt="">
+                <img src="./images/fruit3.png" alt="">
+                <img src="./images/fruit4.png" alt="">
+                <img src="./images/fruit5.png" alt="">
+            </div>
+        </div>
+        </header>
 
-    
-      
+    <!-- Main starts here -->
     <main>
 
     </main>
