deal of the day section done

--- a/index.html
+++ b/index.html
@@ -84,60 +84,88 @@
             <div id="slide1" class="carousel-item relative w-full">
                 <img src="./images/banner1.png" class="w-full rounded-lg" />
                 <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                    <a href="#slide1" class="btn btn-circle  bg-black text-white border-none relative top-10 md:top-24">❮</a>
+                    <a href="#slide1"
+                        class="btn btn-circle  bg-black text-white border-none relative top-10 md:top-24">❮</a>
                     <span class="text-center space-x-3 md:space-y-6 static top-0 lg:relative lg:-top-10">
-                        <h1 class="text-white text-xl md:text-4xl lg:text-7xl font-extrabold text-center">Exotic tastes at your
-                            <br>doorstep</h1>
-                        <p class="text-white text-sm md:text-xl font-normal text-center">We supply highly quality organic products
+                        <h1 class="text-white text-xl md:text-4xl lg:text-7xl font-extrabold text-center">Exotic tastes
+                            at your
+                            <br>doorstep
+                        </h1>
+                        <p class="text-white text-sm md:text-xl font-normal text-center">We supply highly quality
+                            organic products
                         </p>
-                        <button class="px-2 md:px-3 py-1 md:py-5 text-white bg-[#F85559] font-bold text-sm md:text-xl rounded-lg">Shop Now</button>
+                        <button
+                            class="px-2 md:px-3 py-1 md:py-5 text-white bg-[#F85559] font-bold text-sm md:text-xl rounded-lg">Shop
+                            Now</button>
                     </span>
-                    <a href="#slide2" class="btn btn-circle  bg-black text-white border-none relative top-10 md:top-24">❯</a>
+                    <a href="#slide2"
+                        class="btn btn-circle  bg-black text-white border-none relative top-10 md:top-24">❯</a>
                 </div>
             </div>
 
             <div id="slide2" class="carousel-item relative w-full">
                 <img src="./images/banner2.png" class="w-full rounded-lg" />
                 <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                    <a href="#slide1" class="btn btn-circle  bg-black text-white border-none relative top-10 md:top-24">❮</a>
+                    <a href="#slide1"
+                        class="btn btn-circle  bg-black text-white border-none relative top-10 md:top-24">❮</a>
                     <span class="text-center space-x-3 md:space-y-6 static top-0 lg:relative lg:-top-10">
-                        <h1 class="text-white text-xl md:text-4xl lg:text-7xl font-extrabold text-center">Exotic tastes at your
-                            <br>doorstep</h1>
-                        <p class="text-white text-sm md:text-xl font-normal text-center">We supply highly quality organic products
+                        <h1 class="text-white text-xl md:text-4xl lg:text-7xl font-extrabold text-center">Exotic tastes
+                            at your
+                            <br>doorstep
+                        </h1>
+                        <p class="text-white text-sm md:text-xl font-normal text-center">We supply highly quality
+                            organic products
                         </p>
-                        <button class="px-2 md:px-3 py-1 md:py-5 text-white bg-[#F85559] font-bold text-sm md:text-xl rounded-lg">Shop Now</button>
+                        <button
+                            class="px-2 md:px-3 py-1 md:py-5 text-white bg-[#F85559] font-bold text-sm md:text-xl rounded-lg">Shop
+                            Now</button>
                     </span>
-                    <a href="#slide3" class="btn btn-circle  bg-black text-white border-none relative top-10 md:top-24">❯</a>
+                    <a href="#slide3"
+                        class="btn btn-circle  bg-black text-white border-none relative top-10 md:top-24">❯</a>
                 </div>
             </div>
 
             <div id="slide3" class="carousel-item relative w-full">
                 <img src="./images/banner3.png" class="w-full rounded-lg" />
                 <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                    <a href="#slide2" class="btn btn-circle  bg-black text-white border-none relative top-10 md:top-24">❮</a>
+                    <a href="#slide2"
+                        class="btn btn-circle  bg-black text-white border-none relative top-10 md:top-24">❮</a>
                     <span class="text-center space-x-3 md:space-y-6 static top-0 lg:relative lg:-top-10">
-                        <h1 class="text-white text-xl md:text-4xl lg:text-7xl font-extrabold text-center">Exotic tastes at your
-                            <br>doorstep</h1>
-                        <p class="text-white text-sm md:text-xl font-normal text-center">We supply highly quality organic products
+                        <h1 class="text-white text-xl md:text-4xl lg:text-7xl font-extrabold text-center">Exotic tastes
+                            at your
+                            <br>doorstep
+                        </h1>
+                        <p class="text-white text-sm md:text-xl font-normal text-center">We supply highly quality
+                            organic products
                         </p>
-                        <button class="px-2 md:px-3 py-1 md:py-5 text-white bg-[#F85559] font-bold text-sm md:text-xl rounded-lg">Shop Now</button>
+                        <button
+                            class="px-2 md:px-3 py-1 md:py-5 text-white bg-[#F85559] font-bold text-sm md:text-xl rounded-lg">Shop
+                            Now</button>
                     </span>
-                    <a href="#slide4" class="btn btn-circle  bg-black text-white border-none relative top-10 md:top-24">❯</a>
+                    <a href="#slide4"
+                        class="btn btn-circle  bg-black text-white border-none relative top-10 md:top-24">❯</a>
                 </div>
             </div>
 
             <div id="slide4" class="carousel-item relative w-full">
                 <img src="./images/banner4.png" class="w-full rounded-lg" />
                 <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                    <a href="#slide3" class="btn btn-circle  bg-black text-white border-none relative top-10 md:top-24">❮</a>
+                    <a href="#slide3"
+                        class="btn btn-circle  bg-black text-white border-none relative top-10 md:top-24">❮</a>
                     <span class="text-center space-x-3 md:space-y-6 static top-0 lg:relative lg:-top-10">
-                        <h1 class="text-white text-xl md:text-4xl lg:text-7xl font-extrabold text-center">Exotic tastes at your
-                            <br>doorstep</h1>
-                        <p class="text-white text-sm md:text-xl font-normal text-center">We supply highly quality organic products
+                        <h1 class="text-white text-xl md:text-4xl lg:text-7xl font-extrabold text-center">Exotic tastes
+                            at your
+                            <br>doorstep
+                        </h1>
+                        <p class="text-white text-sm md:text-xl font-normal text-center">We supply highly quality
+                            organic products
                         </p>
-                        <button class="px-2 md:px-3 py-1 md:py-5 text-white bg-[#F85559] font-bold text-sm md:text-xl rounded-lg">Shop Now</button>
+                        <button
+                            class="px-2 md:px-3 py-1 md:py-5 text-white bg-[#F85559] font-bold text-sm md:text-xl rounded-lg">Shop
+                            Now</button>
                     </span>
-                    <a href="#slide4" class="btn btn-circle  bg-black text-white border-none relative top-10 md:top-24">❯</a>
+                    <a href="#slide4"
+                        class="btn btn-circle  bg-black text-white border-none relative top-10 md:top-24">❯</a>
                 </div>
             </div>
 
@@ -146,7 +174,8 @@
         <!-- position fruits -->
         <div>
 
-            <div class="grid grid-cols-5 max-w-3xl mx-auto shadow-lg shadow-[#0000000d] bg-white px-16 py-12 relative -top-28 z-20  invisible lg:visible">
+            <div
+                class="grid grid-cols-5 max-w-3xl mx-auto shadow-lg shadow-[#0000000d] bg-white px-16 py-12 relative -top-28 z-20  invisible lg:visible">
                 <img src="./images/fruit1.png" alt="">
                 <img src="./images/fruit2.png" alt="">
                 <img src="./images/fruit3.png" alt="">
@@ -154,11 +183,64 @@
                 <img src="./images/fruit5.png" alt="">
             </div>
         </div>
-        </header>
+    </header>
 
     <!-- Main starts here -->
-    <main>
-
+    <main class="container mx-auto px-5 lg:p-0">
+        <!-- Deal of the day Section -->
+        <section class="flex justify-between items-center">
+            <div class="">
+                <h1 class="font-extrabold text-5xl text-primary mb-6">Deal of the day</h1>
+                <p class="text-normal font-medium text-secondary">Contrary to popular belief, is not simply random text. It has roots in a piece of classical <br>
+                     Latin literature from 45 BC, making it over 2000 years old.
+                </p>
+            </div>
+            <div class="">
+                <div class="grid grid-flow-col gap-5 text-center auto-cols-max">
+                    <div class="flex flex-col">
+                      <span class="countdown text-5xl font-extrabold text-primary">
+                        <span style="--value:15;" class="pr-4"></span>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                            <path d="M12 6.75C11.8011 6.75 11.6103 6.67098 11.4697 6.53033C11.329 6.38968 11.25 6.19891 11.25 6C11.25 5.80109 11.329 5.61032 11.4697 5.46967C11.6103 5.32902 11.8011 5.25 12 5.25C12.1989 5.25 12.3897 5.32902 12.5303 5.46967C12.671 5.61032 12.75 5.80109 12.75 6C12.75 6.19891 12.671 6.38968 12.5303 6.53033C12.3897 6.67098 12.1989 6.75 12 6.75ZM12 12.75C11.8011 12.75 11.6103 12.671 11.4697 12.5303C11.329 12.3897 11.25 12.1989 11.25 12C11.25 11.8011 11.329 11.6103 11.4697 11.4697C11.6103 11.329 11.8011 11.25 12 11.25C12.1989 11.25 12.3897 11.329 12.5303 11.4697C12.671 11.6103 12.75 11.8011 12.75 12C12.75 12.1989 12.671 12.3897 12.5303 12.5303C12.3897 12.671 12.1989 12.75 12 12.75ZM12 18.75C11.8011 18.75 11.6103 18.671 11.4697 18.5303C11.329 18.3897 11.25 18.1989 11.25 18C11.25 17.8011 11.329 17.6103 11.4697 17.4697C11.6103 17.329 11.8011 17.25 12 17.25C12.1989 17.25 12.3897 17.329 12.5303 17.4697C12.671 17.6103 12.75 17.8011 12.75 18C12.75 18.1989 12.671 18.3897 12.5303 18.5303C12.3897 18.671 12.1989 18.75 12 18.75Z" stroke="#121212" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                          </svg>
+                      </span>
+                      <span class="text-center text-normal font-medium text-secondary pr-8 mt-2">
+                        Days
+                      </span>
+                    </div> 
+                    <div class="flex flex-col">
+                      <span class="countdown text-5xl font-extrabold text-primary">
+                        <span style="--value:10;" class="pr-4"></span>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                            <path d="M12 6.75C11.8011 6.75 11.6103 6.67098 11.4697 6.53033C11.329 6.38968 11.25 6.19891 11.25 6C11.25 5.80109 11.329 5.61032 11.4697 5.46967C11.6103 5.32902 11.8011 5.25 12 5.25C12.1989 5.25 12.3897 5.32902 12.5303 5.46967C12.671 5.61032 12.75 5.80109 12.75 6C12.75 6.19891 12.671 6.38968 12.5303 6.53033C12.3897 6.67098 12.1989 6.75 12 6.75ZM12 12.75C11.8011 12.75 11.6103 12.671 11.4697 12.5303C11.329 12.3897 11.25 12.1989 11.25 12C11.25 11.8011 11.329 11.6103 11.4697 11.4697C11.6103 11.329 11.8011 11.25 12 11.25C12.1989 11.25 12.3897 11.329 12.5303 11.4697C12.671 11.6103 12.75 11.8011 12.75 12C12.75 12.1989 12.671 12.3897 12.5303 12.5303C12.3897 12.671 12.1989 12.75 12 12.75ZM12 18.75C11.8011 18.75 11.6103 18.671 11.4697 18.5303C11.329 18.3897 11.25 18.1989 11.25 18C11.25 17.8011 11.329 17.6103 11.4697 17.4697C11.6103 17.329 11.8011 17.25 12 17.25C12.1989 17.25 12.3897 17.329 12.5303 17.4697C12.671 17.6103 12.75 17.8011 12.75 18C12.75 18.1989 12.671 18.3897 12.5303 18.5303C12.3897 18.671 12.1989 18.75 12 18.75Z" stroke="#121212" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                          </svg>
+                      </span>
+                      <span class="text-center text-normal font-medium text-secondary pr-8 mt-2">
+                        Hours
+                      </span>
+                    </div> 
+                    <div class="flex flex-col">
+                      <span class="countdown text-5xl font-extrabold text-primary">
+                        <span style="--value:24;" class="pr-4"></span>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                            <path d="M12 6.75C11.8011 6.75 11.6103 6.67098 11.4697 6.53033C11.329 6.38968 11.25 6.19891 11.25 6C11.25 5.80109 11.329 5.61032 11.4697 5.46967C11.6103 5.32902 11.8011 5.25 12 5.25C12.1989 5.25 12.3897 5.32902 12.5303 5.46967C12.671 5.61032 12.75 5.80109 12.75 6C12.75 6.19891 12.671 6.38968 12.5303 6.53033C12.3897 6.67098 12.1989 6.75 12 6.75ZM12 12.75C11.8011 12.75 11.6103 12.671 11.4697 12.5303C11.329 12.3897 11.25 12.1989 11.25 12C11.25 11.8011 11.329 11.6103 11.4697 11.4697C11.6103 11.329 11.8011 11.25 12 11.25C12.1989 11.25 12.3897 11.329 12.5303 11.4697C12.671 11.6103 12.75 11.8011 12.75 12C12.75 12.1989 12.671 12.3897 12.5303 12.5303C12.3897 12.671 12.1989 12.75 12 12.75ZM12 18.75C11.8011 18.75 11.6103 18.671 11.4697 18.5303C11.329 18.3897 11.25 18.1989 11.25 18C11.25 17.8011 11.329 17.6103 11.4697 17.4697C11.6103 17.329 11.8011 17.25 12 17.25C12.1989 17.25 12.3897 17.329 12.5303 17.4697C12.671 17.6103 12.75 17.8011 12.75 18C12.75 18.1989 12.671 18.3897 12.5303 18.5303C12.3897 18.671 12.1989 18.75 12 18.75Z" stroke="#121212" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                          </svg>
+                      </span>
+                      <span class="text-center text-normal font-medium text-secondary pr-8 mt-2">
+                        Minutes
+                      </span>
+                    </div> 
+                    <div class="flex flex-col">
+                      <span class="countdown text-5xl font-extrabold text-primary">
+                        <span style="--value:44;"></span>
+                      </span>
+                      <span class="text-center text-normal font-medium text-secondary pr-8 mt-2">
+                        Seconds
+                      </span>
+                    </div>
+                  </div>
+            </div>
+        </section>
     </main>
 
     <footer>
